--- a/package.json
+++ b/package.json
@@ -23,18 +23,21 @@
   "dependencies": {
     "@actions/core": "^1.10.0",
     "@actions/exec": "^1.1.1",
-    "@actions/glob": "^0.3.0",
+    "@actions/glob": "^0.5.0",
     "@actions/tool-cache": "^2.0.1",
     "@iarna/toml": "github:AlexTMjugador/iarna-toml#fix/comment-crlf",
     "string-argv": "^0.3.1",
-    "typescript": "^4.6.2"
+    "typescript": "^5.8.3"
   },
   "devDependencies": {
-    "@types/node": "^18.19.76",
-    "@typescript-eslint/parser": "^5.40.1",
-    "@vercel/ncc": "^0.36.0",
-    "eslint": "^8.26.0",
-    "eslint-plugin-github": "^4.4.0",
-    "prettier": "^2.8.8"
+    "@eslint/eslintrc": "^3.3.1",
+    "@eslint/js": "^9.24.0",
+    "@types/node": "^20",
+    "@typescript-eslint/parser": "^8.29.0",
+    "@vercel/ncc": "^0.38.3",
+    "eslint": "^9.24.0",
+    "eslint-plugin-github": "^6.0.0",
+    "globals": "^16.0.0",
+    "prettier": "^3.5.2"
   }
 }
