Add manylinux_2_36 loongarch64-unknown-linux-gnu

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -244,6 +244,11 @@ jobs:
               test-crate: 'maturin/test-crates/pyo3-mixed'
             },
             {
+              manylinux: 'manylinux_2_36',
+              target: 'loongarch64-unknown-linux-gnu',
+              test-crate: 'maturin/test-crates/pyo3-mixed'
+            },
+            {
               manylinux: 'auto',
               target: 'x86_64-unknown-linux-musl', # MUSL
               test-crate: 'maturin/test-crates/hello-world' # binary
