--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -256,6 +256,11 @@ jobs:
               test-crate: 'maturin/test-crates/pyo3-mixed'
             },
             {
+              manylinux: 'manylinux_2_39',
+              target: 'riscv64gc-unknown-linux-gnu',
+              test-crate: 'maturin/test-crates/pyo3-mixed'
+            },
+            {
               manylinux: 'manylinux_2_36',
               target: 'loongarch64-unknown-linux-gnu',
               test-crate: 'maturin/test-crates/pyo3-mixed'
