--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -6,13 +6,19 @@ on:
     # Run every day at 1:00
     - cron: '0 1 * * *'
 
+permissions: {}
+
 jobs:
   update:
     name: Update Versions Manifest
     runs-on: ubuntu-latest
+    permissions:
+      pull-requests: write # for PR creation
     steps:
-    - uses: actions/checkout@v4
-    - uses: actions/setup-python@v5
+    - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
+      with:
+        persist-credentials: false
+    - uses: actions/setup-python@e797f83bcb11b83ae66e0230d6156d7c80228e7c # v6.0.0
       with:
         python-version: "3.10"
     - name: Install requirements
@@ -22,7 +28,7 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: python generate-versions-manifest.py
     - name: Create Pull Request
-      uses: peter-evans/create-pull-request@v7
+      uses: peter-evans/create-pull-request@271a8d0340265f705b14b6d32b9829c1cb33d45e # v7.0.8
       with:
         branch: update-versions-manifest
         delete-branch: true
