--- a/.github/workflows/update.yml
+++ b/.github/workflows/update.yml
@@ -13,6 +13,7 @@ jobs:
     name: Update Versions Manifest
     runs-on: ubuntu-latest
     permissions:
+      contents: write # for push
       pull-requests: write # for PR creation
     steps:
     - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
