--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -41,9 +41,11 @@ jobs:
       matrix:
         os:
           - ubuntu-24.04
-          - ubuntu-22.04-arm
-          - macos-13
+          - ubuntu-24.04-arm
+          - macos-15-intel
+          - macos-latest
           - windows-latest
+          - windows-11-arm
         toolchain: [stable, nightly]
     steps:
       - uses: actions/checkout@08c6903cd8c0fde910a37f88322edcfb5dd907a8 # v5.0.0
