--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -282,6 +282,11 @@ jobs:
               manylinux: 'musllinux_1_2',
               target: 'x86_64-unknown-linux-musl', # MUSL
               test-crate: 'maturin/test-crates/hello-world' # binary
+            },
+            {
+              manylinux: 'musllinux_1_2',
+              target: 'riscv64gc-unknown-linux-musl', # MUSL
+              test-crate: 'maturin/test-crates/hello-world' # binary
             }
           ]
         toolchain: [stable, nightly]
